# opengl-portal

./: CMakeLists.txt  README.md
res/models/: scene.mtl  scene2.mtl
res/shaders/: fragment.shader  vertex.shader
src/: OBJ_Loader.cpp  OBJ_Loader.h  application.cpp  application.h  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  portal.cpp  portal.h  resource.h  shader.cpp  shader.h  textures.cpp  textures.h  vao.cpp  vao.h  vbo.cpp  vbo.h
